--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Clare Jolly <clarejollyuk@gmail.com>",
   "license": "MIT",
   "scope": "@ClareJolly",
+  "bin": {
+    "aoc": "./bin/index.js"
+  },
   "scripts": {
     "test": "jest --config ./jest.config.js",
     "day": "ts-node --log-error ./src",
@@ -29,6 +32,7 @@
     "@babel/preset-typescript": "^7.10.1",
     "@types/jest": "^27.0.3",
     "@types/mock-fs": "^4.13.1",
+    "chalk": "4.1.2",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.2.0",
     "eslint-config-standard": "^16.0.2",
@@ -37,8 +41,12 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-unused-imports": "^1.1.1",
+    "fs-extra": "^9.0.1",
+    "inquirer": "^7.3.3",
     "jest": "^27.0.7",
+    "jsdom": "^16.4.0",
     "mock-fs": "^4.13.0",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.2.1",
     "ts-jest": "^27.0.7",
     "typescript": "^4.5.2",
