--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "node-fetch": "^2.6.1",
     "prettier": "^2.2.1",
     "ts-jest": "^27.0.7",
+    "ts-node": "^10.9.1",
     "typescript": "^4.5.2",
     "yargs": "^16.2.0"
   }
